# python-n26

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MAINTAINERS  MANIFEST.in  Makefile  Pipfile  README.md  azure-pipelines.yml  example.py  n26.tml.example  n26.yml.example  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  stale.yml
.github/workflows/: docker-latest.yml  python-app.yml  python-publish.yml
docker/: entrypoint.sh
n26/: __main__.py  api.py  cli.py  config.py  const.py  util.py
tests/: test_account.py  test_api.py  test_api_base.py  test_balance.py  test_cards.py  test_config.py  test_creds.yml  test_spaces.py  test_standing_orders.py  test_statistics.py  test_transactions.py
tests/api_responses/: account_info.json  account_limits.json  account_statuses.json  addresses.json  auth_token.json  balance.json  card_unblock_single.json  cards.json  contacts.json  refresh_token.json  spaces.json  standing_orders.json  statements.json  statistics.json  transactions.json  transactions2.json
tests/requests/: balance.json
