[tool.poetry]
name = "n26"
version = "3.3.0"
description = "Unofficial Python client for n26 (Number 26) "
authors = ["femueller", "markusressel"]

[tool.poetry.dependencies]
python = "==3.11"
click = "*"
container-app-conf = "==5.*,>=5.2.0"
inflect = "*"
pycryptodome = ">=3.9"
pyyaml = "*"
requests = "==2.*,>=2.28.0"
tabulate = ">=0.9.0"
tenacity = "==8.*,>=8.1.0"
urllib3 = "==1.*,>=1.26.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
mock = "*"
pytest = "*"
